# PythonProject

./: .gitignore  README.md
ML/: Catboost_23_05_25.ipynb
backend/: .gitignore  docker-compose.yml  main.py  pyproject.toml
backend/actions/: create_superuser.py
backend/alembic/: env.py
backend/alembic/versions/: 2025_05_11_2245-90580115952e_create_users_table.py  2025_05_16_2018-fb9c31996ac4_create_products_table.py  2025_05_21_0008-74bebc69401e_create_purchase.py  2025_05_21_2344-b206a86fff1e_create_product_veiws.py
backend/api/: __init__.py  auth.py  category.py  product.py  purchase.py  users.py
backend/api/Dependencies/: backend.py  fastapi_users_object.py  user_manager.py  users.py
backend/certs/: private.pem  public.pem
backend/core/: config.py
backend/core/auth/: strategy.py  transport.py  user_manager.py
backend/core/models/: __init__.py  base.py  categories.py  db_helper.py  product.py  product_views.py  purchase.py  user.py
backend/core/schemas/: category.py  product.py  purchase.py
backend/crud/: base.py  categories.py  product_views.py  products.py  purchase.py
backend/unit_tests/: test_app.py
backend/utils/: minio.py
frontend/.next/: trace
frontend/.next/cache/: .rscinfo
frontend/.next/server/: server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @floating-ui.js  @radix-ui.js  @swc.js  aria-hidden.js  class-variance-authority.js  clsx.js  get-nonce.js  lucide-react.js  next-themes.js  react-remove-scroll-bar.js  (+6 more)
(+33 files in other folders)
